--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,23 @@
-* {
-    margin: 0;
-    padding: 0;
+body {
+    max-width: 1024px;
+    margin: 0 auto;
     color: #333;
-    font-family: sans-serif;
+    font-family: "Helvetica", sans-serif;
+    letter-spacing: 0.03em;
+    line-height: 1.3;
 }
 
+.main-photo {
+    height: 200px;
+    border-radius: 50%;
+}
+hr {
+    border: none;
+    color: #333;
+    background-color: #eaeaea;
+    height: 6px;
+    border-radius: 3px;
+}
+li:not(:last-child) {
+    margin-bottom: 8px;
+}
